--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "socket.io-client": "^1.7.2"
+    "socket.io-client": "^1.7.2",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.0",
+    "socket.io": "^1.7.2"
   }
 }
